--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "mongoose": "^8.8.3",
     "multer": "^2.0.1",
     "nodemailer": "^6.9.16",
-    "socket.io": "^4.8.1",
-    "word-list": "^4.1.0"
+    "socket.io": "^4.8.1"
   }
 }
