--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ SMTP_SECURE=false
 SMTP_USER=justappsandprojects@gmail.com
 SMTP_PASS=evpivlyyuyvnccmj
 SMTP_FROM=Orisun Family App <justappsandprojects@gmail.com>
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=orisun-frontend.vercel.app
 REACT_APP_API_BASE_URL=http://localhost:5000
